--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.22.0",
     "muse-ui": "^2.1.0",
     "stylus": "^0.54.5",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^2.2.0",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
